crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-11.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M10 50h30h-30\"/>\n    <path d=\"M10 50h-30h30\"/>\n    <path d=\"M10 50h-30h-50\"/>\n    <path d=\"M10 50h30h50\"/>\n    <path d=\"M10 50v30v-30\"/>\n    <path d=\"M10 50v-30v30\"/>\n    <path d=\"M10 50v-30v-50\"/>\n    <path d=\"M10 50v30v50\"/>\n    <path d=\"M10 50L10 80L10 0\"/>\n    <path d=\"M10 50L10 10L10 80\"/>\n    <path d=\"M10 50l10 10l20 20l10 10\"/>\n    <path d=\"M10 50L80 50L0 50\"/>\n    <path d=\"M10 50L0 50L80 50\"/>\n    <path d=\"M10 50L0 50M80 50M30 10L10 80\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="M10 50h30Z"/>
    <path d="M10 50h-30Z"/>
    <path d="M10 50h-80"/>
    <path d="M10 50h80"/>
    <path d="M10 50v30Z"/>
    <path d="M10 50V20Z"/>
    <path d="M10 50v-80"/>
    <path d="M10 50v80"/>
    <path d="M10 50v30V0"/>
    <path d="M10 50V10 80"/>
    <path d="m10 50 40 40"/>
    <path d="M10 50h70H0"/>
    <path d="M10 50H0 80"/>
    <path d="M10 50H0M30 10 10 80"/>
</svg>
