crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-8.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M100,200 C200,200 300,200 400,200\"/>\n    <path d=\"M100,200 C100,200 250,200 250,200 S300,200 400,200\"/>\n    <path d=\"M100,200 C100,200 250,200 250,200 S300,300 400,210\"/>\n    <path d=\"M100,200 S250,250 250,250 S400,250 500,250\"/>\n    <path d=\"M100,200 Q200,200 300,200\"/>\n    <path d=\"M100,200 Q400,200 600,200 T800,200\"/>\n    <path d=\"M100,200 Q400,200 600,200 T800,300\"/>\n    <path d=\"M100,200 Q200,200 200,300 T200,500 T300,500\"/>\n    <path d=\"M100,200 Q400,200 600,200 T800,200 T900,300\"/>\n    <path d=\"M100,200 T800,300\"/>\n    <path d=\"M100,200 A0,150 0 0,0 150,150\"/>\n    <path d=\"M100,200 A150,0 0 0,0 150,150\"/>\n    <path d=\"M100,200 c-2.5 10.5-4 21-4 32 0 64 63.5 128 127.5 128s32.5 0 96.5 0 128-64 128-128-64-128-128-128\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="M100 200h300"/>
    <path d="M100 200h300"/>
    <path d="M100 200h150s50 100 150 10"/>
    <path d="m100 200 150 50h250"/>
    <path d="M100 200h200"/>
    <path d="M100 200h700"/>
    <path d="M100 200h500q200 0 200 100"/>
    <path d="M100 200q100 0 100 100t0 200 100 0"/>
    <path d="M100 200h700l100 100"/>
    <path d="m100 200 700 100"/>
    <path d="m100 200 50-50"/>
    <path d="m100 200 50-50"/>
    <path d="M100 200c-2.5 10.5-4 21-4 32 0 64 63.5 128 127.5 128H320c64 0 128-64 128-128s-64-128-128-128"/>
</svg>
