crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-9.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M100,200 C100,100 450,100 250,200 C50,300 400,300 400,200\"/>\n    <path d=\"M100,200 S250,100 250,200 C250,300 300,250 400,200\"/>\n    <path d=\"M100,200 C100,200 250,100 250,200\"/>\n    <path d=\"M200,300 Q400,50 600,300 Q 800,550 1000,300\"/>\n    <path d=\"M200,300 Q400,50 600,300 T1000,300 Q1200,50 1400,300\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="M100 200c0-100 350-100 150 0s150 100 150 0"/>
    <path d="M100 200s150-100 150 0 50 50 150 0"/>
    <path d="M100 200s150-100 150 0"/>
    <path d="M200 300q200-250 400 0t400 0"/>
    <path d="M200 300q200-250 400 0t400 0 400 0"/>
</svg>
