crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data_open_segments.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\">\n    <!-- a segment isn't closed by the next one starting where it ends -->\n    <path d=\"M2 2l4 4M6 6L10 2\"/>\n    <path d=\"M2 12 6 8l2 2a6 6 0 0 1 3-3l2-1m0 0-3-1m3 1-1 3\"/>\n    <path d=\"M8.683 5A3.75 3.75 0 0 1 15.318 5m0 0c.427-.283.815-.62 1.155-.999\"/>\n    <!-- but is by returning to its own start -->\n    <path d=\"M2 2h4v4zm0 0 8 8\"/>\n    <path d=\"M2 2h4v4H2V2M10 10l4 4\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
    <!-- a segment isn't closed by the next one starting where it ends -->
    <path d="m2 2 4 4m0 0 4-4"/>
    <path d="m2 12 4-4 2 2a6 6 0 0 1 3-3l2-1m0 0-3-1m3 1-1 3"/>
    <path d="M8.683 5a3.75 3.75 0 0 1 6.635 0M15.318 5c.427-.283.815-.62 1.155-.999"/>
    <!-- but is by returning to its own start -->
    <path d="M2 2h4v4Zm0 0 8 8"/>
    <path d="M2 2h4v4H2V2Zm8 8 4 4"/>
</svg>
